fixed overflow of username and fixed footer links

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -492,7 +492,10 @@ a {
   }
 .login{
   margin: 15px 0 0 2vw;
-  height: 100%;
+  height: 50px;
+  /* overflow-x: hidden; */
+  overflow-y: hidden;
+  width: 150px;
 }
 .signup{
   width: 150px;
